Add:Added cors filter, and filter using jwt token